@@ -442,3 +442,4 @@ $string['autorefreshgrades'] = 'Auto Refresh Grades / Scores';
 $string['autorefreshgrades_help'] = 'By default after each call to Turnitin the Moodle integration plug in will attempt to automatically pull down changes made while in within Turnitin. You can use this option to turn off this feature, however in order to maintain synchronisation between both systems you will need to frequently manually refresh grades and originality scores from within Moodle.';
 $string['yesgrades'] = 'Yes, automatically refresh originality scores and grades';
 $string['nogrades'] = 'No, I will refresh originality scores and grades manually';
+$string['noxmlwriterlibrary'] = 'To use this plugin you will need to have the PHP XMLWriter extension installed on your server.';
