@@ -1,3 +1,5 @@
+2014-06-11 : Bug fixed where new files with same filename displaying correct OR link
+2014-06-11 : Check for XMLWriter extension added to settings area
 2014-06-11 : Bug fixed with Allow Non OR file type setting not being changed in Turnitin.
 2014-06-11 : Version file updated for Moodle 2.7+ compatibility
 2014-06-11 : Javascript reorganised to fit better with Moodle guidelines
